<resources>
    <string name="app_name">Durable</string>
    <string name="press_one_again">กดอีกครั้งเพื่อออกจากแอพ</string>
    <string name="click_forget_password">ลืมรหัสผ่าน<u>คลิกที่นี้</u></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_home">หน้าแรก</string>
    <string name="title_durable">ครุภัณฑ์</string>
    <string name="title_report">รายงาน</string>
    <string name="title_sign_out">ออกจากระบบ</string>
    <string name="title_report_pick_up">รายงานการเบิกครุภัณฑ์</string>
    <string name="title_report_borrow">รายงานการยืมครุภัณฑ์</string>
    <string name="title_report_return">รายงานการคืนครุภัณฑ์</string>
    <string name="title_report_repair">รายงานการส่งซ่อมครุภัณฑ์</string>

    <string name="action_settings">ตั้งค่า</string>
    <string name="title_warning">แจ้งเตือน ?</string>
    <string name="internet_connection_fail">ไม่สามารถเชื่อมต่ออินเทอร์เน็ตได้ \nลองใหม่อีกครั้ง</string>
    <string name="ok">ตกลง</string>
    <string name="cancel">ยกเลิก</string>
    <string name="please_enter_data">กรุณากรอกข้อมูลให้ครบ</string>
    <string name="loading">กำลังโหลด...</string>
    <string name="title_asset_detail">รายละเอียดครุภัณฑ์</string>
    <string name="title_durable_property">สินทรัพย์ถาวร</string>
    <string name="title_durable_material">วัสดุถาวร</string>
    <string name="hint_edit_text_search_asset">ระบุรหัสครุภัณฑ์</string>
    <string name="text_manage">จัดการ</string>
    <string name="dialog_label_asset_status">สถานะ :</string>
    <string name="dialog_label_asset_location">สถานที่ตั้ง :</string>
    <string name="button_cancel">ยกเลิก</string>
    <string name="button_save">บันทึก</string>
    <string name="text_project_name">โปรแกรมครุภัณฑ์และตรวจครุภัณฑ์\nบนระบบปฏิบัติการแอนดรอยด์</string>
    <string name="text_department">กองแผนและวิชาการ การประปาส่วนภูมิภาคเขต 10</string>
</resources>
