<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_asset"
            android:icon="@drawable/ic_menu_asset"
            android:title="@string/title_durable" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/title_report" />
<!--        <item
            android:id="@+id/nav_member"
            android:icon="@drawable/ic_menu_member"
            android:title="ผู้ใช้งานระบบ" />-->
    </group>

    <item android:title="">
        <menu>
            <!--<item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="ตั้งค่า" />-->
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/title_sign_out" />
        </menu>
    </item>

</menu>
